--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,5 +19,8 @@
 <!-- 기본 템플릿 안에 삽입될 내용 -->
 <!--Bootstrap JS -->
 <script th:src="@{/bootstrap.min.js}"></script>
+
+<!--자바 스크립트-->
+<th:block layout:fragment="script"></th:block>
 </body>
 </html>
