--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -10,9 +10,12 @@
                 <li class="nav-item">
                     <a class="nav-link" sec:authorize="isAnonymous()"
                        th:href="@{/user/login}">로그인</a>
-                    <a class="nav-link" sec:authorize="isAuthenticated()"
-                       th:href="@{/user/logout}">로그아웃</a>
-                </li>
+                    <a class="nav-link" sec:authorize="isAuthenticated()">
+                        <form th:action="@{/user/logout}" method="post" class="d-inline">
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                            <button type="submit" class="nav-link btn btn-link p-0">로그아웃</button>
+                        </form>
+                    </a>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/user/signup}">회원가입</a>
                 </li>
