질문 추천 기능 구현

--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -22,15 +22,23 @@
             </div>
 
             <div class="my-3">
+                <a href="javascript:void(0);"
+                   class="recommend btn btn-sm btn-outline-secondary"
+                   th:data-uri="@{|/question/vote/${question.id}|}">
+                    추천
+                    <span class="badge rounded-pill bg-success"
+                    th:text="${#lists.size(question.voter)}"></span>
+                </a>
+
                 <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"
                 sec:authorize="isAuthenticated()"
-                th:if="${question.author != null and #authentication.getPrincipal().getUsername == question.author.username}"
+                th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
                 th:text="수정"></a>
 
                 <a href="javascript:void(0);"
                    th:data-uri="@{|/question/delete/${question.id}|}" class="delete btn btn-sm btn-outline-secondary"
                    sec:authorize="isAuthenticated()"
-                   th:if="${question.author != null and #authentication.getPrincipal().getUsername == question.author.username}"
+                   th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
                    th:text="삭제"></a>
             </div>
         </div>
@@ -88,6 +96,15 @@
     Array.from(delete_elements).forEach(function(element){
         element.addEventListener('click', function(){
             if(confirm("정말로 삭제하시겠습니까?")){
+                location.href = this.dataset.uri;
+            };
+        });
+    });
+
+    const recommend_elements = document.getElementsByClassName("recommend");
+    Array.from(recommend_elements).forEach(function(element){
+        element.addEventListener('click', function(){
+            if(confirm("정말로 추천하시겠습니까?")){
                 location.href = this.dataset.uri;
             };
         });
