--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,6 +1,21 @@
 <html layout:decorate="~{layout}" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org">
 <div layout:fragment="content" class="container my-3">
+    <div class="row my-3">
+        <div class="col-6">
+            <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+        </div>
+        <div class="col-6">
+            <div class="input-group">
+                <input type="text" id="search_kw" class="form-control" th:value="${kw}"/>
+                <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+            </div>
+        </div>
+
+    </div>
+
+
+
     <table class="table">
         <thead class="table-dark">
         <tr class="text-center">
@@ -31,7 +46,8 @@
     <div th:if="${!paging.isEmpty()}">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
-                <a class="page-link" th:href="@{|?page=${paging.number-1}|}">
+                <a class="page-link" href="javascript:void(0)"
+                   th:data-page="${paging.number-1}">
                     <span>이전</span>
                 </a>
             </li>
@@ -39,11 +55,13 @@
             <li th:each="page:${#numbers.sequence(0,paging.totalPages-1)}"
                 th:if="${page >= paging.number-5 and page <= paging.number+5}"
                 th:classappend="${page == paging.number} ? 'active'" class="page-item">
-                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+                <a th:text="${page}" class="page-link" href="javascript:void(0)"
+                   th:data-page="${paging.number}"></a>
             </li>
 
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
-                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                <a class="page-link" href="javascript:void(0)"
+                   th:data-page="${paging.number+1}">
                     <span>다음</span>
                 </a>
             </li>
@@ -51,6 +69,26 @@
     </div>
     <!--페이징 처리 끝-->
 
-    <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+    <form th:action="@{/question/list}" method="get" id="searchForm">
+        <input type="hidden" id="kw" name="kw" th:value="${kw}"/>
+        <input type="hidden" id="page" name="page" th:value="${paging.number}"/>
+    </form>
 </div>
+
+<script layout:fragment="script" type="text/javascript">
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element){
+        element.addEventListener('click', function(){
+            document.getElementById('page').value = dataset.page;
+            document.getElementById('searchForm').submit();
+    });
+});
+
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function(){
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    document.getElementById('page').value = 0;
+    document.getElementById('searchForm').submit();
+});
+</script>
 </html>
